--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Template One</title>
+    <title>hCoding</title>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;400;600;800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
@@ -33,7 +33,7 @@
     <div class="section">
         <div class="container">
             <h1>Hello There!</h1>
-            <p>We are Leon-Super Creative & Minimal Agency Web Template</p>
+            <p>We are hCoding-Super Creative & Minimal Agency Web Template</p>
         </div>
     </div>
     <!-- start features section -->
@@ -171,11 +171,11 @@
             <p>We are born to create</p>
             <div class="contact-info">
                 <p class="first">Feel Free to drop us a line at:</p>
-                <p class="mail">leonagency@gmail.com</p>   
+                <p class="mail">hcoding69@gmail.com</p>   
             </div>
             <div class="social">
                 <p>find us on social media:</p>
-                <i title="@haamza203" class="fa-brands fa-instagram"></i>
+                <i title="@hcoding_" class="fa-brands fa-instagram"></i>
                 <i class="fa-brands fa-tiktok"></i>
                 <i class="fa-brands fa-github"></i>
             </div>
@@ -184,7 +184,7 @@
     <!-- end contact -->
     <!-- start footer -->
     <div class="footer">
-        <p>&copy;2023<span> .hamza</span> All Rights Reserved</p>
+        <p>&copy;2023<span> .hCoding</span> All Rights Reserved</p>
     </div>
     <!-- end footer -->
 </body>
