--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- start header -->
         <div class="header">
         <div class="container">
-            <img class="logo" src="images/logo.png" alt="">
+            <img class="logo" src="images/logoNobg.png" alt="">
             <div class="links">
                 <i class="fa-solid fa-bars icon"></i>
                 <ul>
